# xauusd-ai-trading-system

./: .env.mt5.example  .gitignore  README.md  pyproject.toml
configs/: mt5_paper.yaml  mt5_paper_pullback_sell_v3.yaml  mt5_paper_pullback_sell_v4.yaml  mt5_prod.yaml  mvp.yaml  mvp_hybrid_research.yaml  mvp_mean_reversion_research.yaml  mvp_pullback_research.yaml  mvp_pullback_sell_research.yaml  mvp_pullback_sell_research_v2.yaml  mvp_pullback_sell_research_v3.yaml  mvp_pullback_sell_research_v3_branch_gate.yaml  mvp_pullback_sell_research_v3_branch_gate_atr_m5_10.yaml  mvp_pullback_sell_research_v3_branch_gate_entry_hour_18.yaml  mvp_pullback_sell_research_v4.yaml
examples/: acceptance_csv.py  backtest_csv.py  pipeline_smoke.py  replay_csv.py  sample_split_csv.py  walk_forward_csv.py
scripts/: _mt5_common.ps1  _mt5_common.sh  local_mt5_smoke.sh  mt5_bootstrap.ps1  mt5_daily_check_register_task.ps1  mt5_daily_check_task_status.ps1  mt5_daily_check_unregister_task.ps1  mt5_deploy_gate.ps1  mt5_deploy_gate.sh  mt5_export_history.ps1  mt5_export_history.sh  mt5_host_check.ps1  mt5_host_check.sh  mt5_live_once.ps1  mt5_live_once.sh  mt5_monitoring_dashboard.ps1  mt5_monitoring_export_loop.ps1  mt5_monitoring_recover.ps1  mt5_monitoring_register_tasks.ps1  mt5_monitoring_task_runner.ps1  mt5_monitoring_task_status.ps1  mt5_monitoring_unregister_tasks.ps1  mt5_paper_loop.ps1  mt5_paper_loop.sh  mt5_preflight.ps1  mt5_preflight.sh  mt5_probe_history_capacity.ps1  mt5_probe_history_capacity.sh  mt5_prod_loop.ps1  mt5_prod_loop.sh  mt5_pullback_sell_v3_daily_check.ps1  (+49 more)
(+152 files in other folders)
