[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xauusd-ai-system"
version = "0.1.0"
description = "Rule-first XAUUSD intraday quant trading system scaffold."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.optional-dependencies]
research = [
  "backtrader>=1.9.78.123",
]
mt5 = [
  "MetaTrader5",
]
ctrader = [
  "ctrader-open-api>=0.9.2",
]
execution = [
  "MetaTrader5",
  "ctrader-open-api>=0.9.2",
]
dev = [
  "ruff>=0.6",
]

[project.scripts]
xauusd-ai = "xauusd_ai_system.cli:main"
xauusd-ai-smoke = "xauusd_ai_system.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
